# Copyright 2026 Asara LLC
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "asara-caspian"
version = "0.0.1"
description = "Official Python SDK for the public Caspian API."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Asara" }]
maintainers = [{ name = "Asara" }]
keywords = ["asara", "caspian", "sdk", "api", "market-data"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/asara-io/caspian-sdk-python"
Repository = "https://github.com/asara-io/caspian-sdk-python"
Issues = "https://github.com/asara-io/caspian-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/asara"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["asara.caspian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
